# Trabalho-Comunicacoes-Digitais

./: .gitignore  CONTRIBUTING.md  Pipfile  README.md  pyproject.toml
pulso_retangular_meio_periodo/: pulso_retangular_meio_periodo.py
src/: config.py  main.py  pulsos_conformadores.py  sinais.py
src/sinais/: sinal_analogico.py
