[tool.poetry]
name = "trabalho-comunicacoes-digitais"
version = "0.1.0"
description = ""
authors = ["Victor Hugo Viana Santos <torugosis@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
scipy = "^1.6.1"
matplotlib = "^3.3.4"
numpy = "^1.20.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
conventional-commit = "^0.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
